Add eslint and config file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native run-ios && react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -41,6 +41,10 @@
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.0.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react-native": "^3.2.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12",
     "rn-nodeify": "github:mvayngrib/rn-nodeify"
