--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "es6-promisify": "^6.0.0",
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
+    "moment": "^2.22.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
