--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^1.1.7",
     "es6-promisify": "^6.0.0",
+    "es6-symbol": "^3.1.1",
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
     "moment": "^2.22.1",
